<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="alysonrodrigo.com.br.myappportifolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:text="@string/my_nanodegree" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/udacity"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:onClick="chamarPopularMovies"
        android:text="@string/popular_movies"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/udacity"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:onClick="chamarStockHawk"
        android:text="@string/stock_hawk"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/udacity"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:onClick="chamarBuildItBigger"
        android:text="@string/build_it_bigger"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/udacity"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:onClick="chamarMakeYourAppMaterial"
        android:text="@string/make_your_app_material"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/udacity"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:onClick="chamarGoUbiquitous"
        android:text="@string/go_ubiquitous"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/udacity"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:onClick="chamarCapstone"
        android:text="@string/capstone"/>
</LinearLayout>
